QtQml: Move engine-specific data out of base compilation unit

We want to re-use the base compilation unit for different engines. To do
that, we cannot have data in there that belongs to a specific engine.

Pick-to: 6.7
Task-number: QTBUG-120189
Change-Id: I8e43e7ec6c1cd33249dc4ed15fec16babc6d06fb
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>